--- a/src/components/FrontMinimal/Container.module.css
+++ b/src/components/FrontMinimal/Container.module.css
@@ -39,7 +39,9 @@
   padding: 0;
   margin: 0;
   font-size: 50px;
-  background-color: rgba(8, 24, 24, 0);
+  min-width: 450px;
+
+  background-color: rgba(0, 230, 230, 0);
 }
 .rightSub > p {
   padding: 0;
@@ -56,13 +58,13 @@
 
 .drop h4 {
   box-sizing: border-box;
-  margin-left: 100px;
+  margin-left: 70px;
   color: rgb(128, 128, 128);
   font-weight: bolder;
 }
 .dropSub p {
   box-sizing: border-box;
-  margin-left: 100px;
+  margin-left: 70px;
   color: rgb(206, 170, 70);
   font-weight: bolder;
 }
